stDemoOne/force-app/main/default/objects/gps_FundingAwardContract__c/gps_FundingAwardContract__c.object-meta.xml
<CustomObject>
    <label>Funding Award Contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Award Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>