stDemoOne/force-app/main/default/objects/gps_FundingAwardContract__c/fields/AwardeeId__c.field-meta.xml
<CustomField>
    <fullName>AwardeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Awardee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Award Contracts</relationshipLabel>
    <relationshipName>Funding_Award_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>