stDemoOne/force-app/main/default/objects/gps_FundingAwardContract__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Award Contracts</relationshipLabel>
    <relationshipName>Funding_Award_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>